<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".8"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_60sdp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/enter_mobile_number_and_password_to_continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/dm_sans"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_background"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodeHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:ccp_autoDetectCountry="true"
                app:ccp_showNameCode="false" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="@color/white"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color" />

            <TextView
                android:id="@+id/txt_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/send_code"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:textColor="@color/main_color"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editText_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:background="@drawable/edit_text_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:hint="@string/otp_code"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingStart="@dimen/_10sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/editText_otp"
            app:layout_constraintBottom_toBottomOf="@id/editText_otp"
            app:layout_constraintEnd_toEndOf="@id/editText_otp"
            android:text="Resend"
            android:textColor="@color/main_color"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textSize="@dimen/_13ssp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:elevation="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/_15ssp"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_otp"
            android:layout_marginVertical="@dimen/_10sdp"
            />

        <TextView
            android:id="@+id/txt_do_not_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_a_captain_account"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/_13ssp"
            android:layout_margin="@dimen/_10sdp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:elevation="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textSize="@dimen/_15ssp"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_do_not_have_acc"
            android:layout_marginVertical="@dimen/_10sdp"
            android:backgroundTint="@color/orange"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>