<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.PersonalInformationFragment"
    android:padding="@dimen/_10sdp"
    >



    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingStart="@dimen/_15sdp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/dm_sans"
        />

    <TextView
        android:id="@+id/text_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_sans"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingStart="@dimen/_15sdp"
        android:text="@string/step_3_personal_information"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/txt_title"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="50"
        android:progress="30"
        android:progressDrawable="@drawable/custom_progress_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_step" />


    <ImageView
        android:id="@+id/img_personal_photo"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/dotted_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintWidth_percent=".5" />

    <ImageView
        android:id="@+id/img_insert_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circular_background"
        android:scaleType="center"
        android:src="@drawable/baseline_add_photo_alternate"
        app:layout_constraintBottom_toBottomOf="@id/img_personal_photo"
        app:layout_constraintEnd_toEndOf="@+id/img_personal_photo"
        app:layout_constraintStart_toStartOf="@+id/img_personal_photo"
        app:layout_constraintTop_toTopOf="@+id/img_personal_photo" />

    <TextView
        android:id="@+id/txt_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_photo"
        app:layout_constraintEnd_toEndOf="@id/img_personal_photo"
        app:layout_constraintStart_toStartOf="@id/img_personal_photo"
        app:layout_constraintTop_toBottomOf="@id/img_insert_photo" />

    <ImageView
        android:id="@+id/img_id_front"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/dotted_background"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_personal_photo"
        app:layout_constraintWidth_percent=".46" />

    <ImageView
        android:id="@+id/img_insert_id_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circular_background"
        android:scaleType="center"
        android:src="@drawable/baseline_add_photo_alternate"
        app:layout_constraintBottom_toBottomOf="@id/img_id_front"
        app:layout_constraintEnd_toEndOf="@+id/img_id_front"
        app:layout_constraintStart_toStartOf="@+id/img_id_front"
        app:layout_constraintTop_toTopOf="@+id/img_id_front" />

    <TextView
        android:id="@+id/txt_add_id_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_front"
        app:layout_constraintEnd_toEndOf="@id/img_id_front"
        app:layout_constraintStart_toStartOf="@id/img_id_front"
        app:layout_constraintTop_toBottomOf="@id/img_insert_id_front" />

    <ImageView
        android:id="@+id/img_id_back"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/dotted_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_personal_photo"
        app:layout_constraintWidth_percent=".46" />

    <ImageView
        android:id="@+id/img_insert_id_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circular_background"
        android:scaleType="center"
        android:src="@drawable/baseline_add_photo_alternate"
        app:layout_constraintBottom_toBottomOf="@id/img_id_back"
        app:layout_constraintEnd_toEndOf="@+id/img_id_back"
        app:layout_constraintStart_toStartOf="@+id/img_id_back"
        app:layout_constraintTop_toTopOf="@+id/img_id_back" />

    <TextView
        android:id="@+id/txt_add_id_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_front"
        app:layout_constraintEnd_toEndOf="@id/img_id_back"
        app:layout_constraintStart_toStartOf="@id/img_id_back"
        app:layout_constraintTop_toBottomOf="@id/img_insert_id_back" />

    <EditText
        android:id="@+id/editText_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/id_number"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_id_front"
        android:backgroundTint="@color/hint_color"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/password"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_id"
        android:backgroundTint="@color/hint_color"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/baseline_show_password"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="@dimen/_15ssp"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password"
        android:layout_marginTop="@dimen/_5sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>