<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    tools:context=".ui.home.requests.FinishingTripFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/trip_finished"
            android:textStyle="bold"
            android:fontFamily="@font/dm_sans"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_passenger_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Israa Mohamed"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="@dimen/_15ssp"
            android:fontFamily="@font/dm_sans"
            android:layout_margin="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            />
        <TextView
            android:id="@+id/txt_trip_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="105 EGP"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_passenger_name"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:fontFamily="@font/dm_sans"
            android:layout_marginTop="@dimen/_5sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cash"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/hint_color"
            app:layout_constraintTop_toBottomOf="@id/txt_trip_price"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/_15sdp"

            />

        <RatingBar
            android:id="@+id/rate_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:paddingVertical="@dimen/_5sdp"
            android:progressTint="@color/orange"
            android:rating="4"
            android:stepSize="1"
            app:layout_constraintStart_toStartOf="@id/txt_passenger_name"
            app:layout_constraintTop_toBottomOf="@id/txt_passenger_name" />

        <TextView
            android:id="@+id/txt_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(4.0)"
            android:textColor="@color/secondary_color"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintStart_toEndOf="@id/rate_bar"
            app:layout_constraintTop_toTopOf="@id/rate_bar"
            android:paddingVertical="@dimen/_5sdp"
            />

        <EditText
            android:id="@+id/txt_paid_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".45"
            app:layout_constraintTop_toBottomOf="@id/rate_bar"
            app:layout_constraintStart_toStartOf="@id/txt_passenger_name"
            app:layout_constraintBottom_toTopOf="@id/btn_confirm"
            android:layout_marginVertical="@dimen/_10sdp"
            android:hint="@string/paid_money"
            android:textColorHint="@color/hint_color"
            android:backgroundTint="@color/hint_color"
            android:textColor="@color/textColor"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="105 EGP"
            android:textColor="@color/main_color"
            android:backgroundTint="@color/backgroundColor"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/dm_sans"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/rate_bar"
            app:layout_constraintStart_toEndOf="@id/txt_paid_money"
            app:cornerRadius="@dimen/_5sdp"
            android:textAllCaps="false"
            android:padding="@dimen/_10sdp"
            app:strokeColor="@color/main_color"
            app:strokeWidth="1dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:elevation="@dimen/_5sdp"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".35"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/dm_sans"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/txt_paid_money"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="@dimen/_15sdp"
            app:cornerRadius="@dimen/_5sdp"
            android:textAllCaps="false"
            android:padding="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>